[DOCKER] Reduced size of docker image